# AI-Government-Job-Finder

./: .gitignore  README.md
backend/: README.md  app.py  pyproject.toml  render.yaml  requirement.txt
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: JobCard.tsx  SearchBar.tsx
frontend/src/services/: api.ts
